updated  game logic